fix spacing on Contact and add Contact line

--- a/src/sass/all.sass
+++ b/src/sass/all.sass
@@ -103,7 +103,7 @@ body
 
 // Global styles
 .cardViewContainer
-  height: auto
+  height: 100%
   width: 100%
 .cardViewTriple
   height: auto
