--- a/src/sass/price.sass
+++ b/src/sass/price.sass
@@ -77,7 +77,7 @@
         font-weight: $bold
         margin: 1rem
       & .blue-btn
-        background: linear-gradient(90deg, $primary, $secondary)
+        background: linear-gradient(90deg,#1789c9,#63b3f4);
   & .conditions
     margin-bottom: 5rem
     color: $white
