--- a/src/sass/responsive.sass
+++ b/src/sass/responsive.sass
@@ -178,8 +178,3 @@
 @media screen and (max-width: 1024px)
   .is-white
   padding-top: 60px
-
-@media screen and (max-width: 1024px)
-  .benefitsSectionContent
-    & .cardViewContainer
-      height: auto
